
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int flags; scalar_t__ value; scalar_t__ disabled; } ;
union iwreq_data {TYPE_1__ retry; } ;
struct net_device {int dummy; } ;
struct iw_request_info {int dummy; } ;
struct ipw2100_priv {scalar_t__ long_retry_limit; scalar_t__ short_retry_limit; } ;


 int EINVAL ;
 int IPW_DEBUG_WX (char*,scalar_t__) ;
 int IW_RETRY_LIFETIME ;
 int IW_RETRY_LIMIT ;
 int IW_RETRY_LONG ;
 int IW_RETRY_SHORT ;
 int IW_RETRY_TYPE ;
 struct ipw2100_priv* libipw_priv (struct net_device*) ;

__attribute__((used)) static int ipw2100_wx_get_retry(struct net_device *dev,
    struct iw_request_info *info,
    union iwreq_data *wrqu, char *extra)
{




 struct ipw2100_priv *priv = libipw_priv(dev);

 wrqu->retry.disabled = 0;

 if ((wrqu->retry.flags & IW_RETRY_TYPE) == IW_RETRY_LIFETIME)
  return -EINVAL;

 if (wrqu->retry.flags & IW_RETRY_LONG) {
  wrqu->retry.flags = IW_RETRY_LIMIT | IW_RETRY_LONG;
  wrqu->retry.value = priv->long_retry_limit;
 } else {
  wrqu->retry.flags =
      (priv->short_retry_limit !=
       priv->long_retry_limit) ?
      IW_RETRY_LIMIT | IW_RETRY_SHORT : IW_RETRY_LIMIT;

  wrqu->retry.value = priv->short_retry_limit;
 }

 IPW_DEBUG_WX("GET Retry -> %d\n", wrqu->retry.value);

 return 0;
}
